--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   "dependencies": {
     "cross-fetch": "^2.2.2",
     "express": "^4.16.4",
-    "express-vue": "^5.7.1"
+    "express-vue": "^5.7.1",
+    "multer": "^1.4.1"
   }
 }
